[workspace]
members = ["crates/binance-trader", "crates/pancakeswap", "jin"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12.22", features = ["json"] }
anyhow = { version = "1.0.50" }
serde_urlencoded = { version = "0.7.1" }

alloy = { version = "1.0.16", features = [
    "full",
    "node-bindings",
    "rpc-types-debug",
    "rpc-types-trace",
    "json-rpc",
    "rpc-client",
    "signer-aws",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
    "eips",
] }
async-trait = "0.1"
ruint = "1.15"
serde_yaml = "0.9.33"
log = "0.4.14"
env_logger = "0.11"
pancakeswap = { path = "crates/pancakeswap" }